# cerberusPy

./: .gitignore  README.md  example_cerberus_colab_mamba.ipynb  pyproject.toml  setup.py
ceberus_torch_coilnorm/: torch_coilnorm_notebook.ipynb  torch_coilnorm_notebook_acc.ipynb
cerberusPy/: cerberus_builder.py  cerberus_builder_attention.py  cerberus_builder_attention_hybrid.py  cerberus_builder_attention_noneck.py  cerberus_builder_noneck.py  module_benchmark.ipynb  postprocess.py  preprocess.py  test_notebook.ipynb  test_notebook_alt.ipynb  torch_notebook.ipynb
cerberus_torch/: preprocess.py  torch_foresight_notebook.ipynb  torch_notebook.ipynb
cerberus_ts/: __init__.py
cerberus_ts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cerberus_ts/modules/: attention_aggregator.py  build_cerberus.py  build_foresight.py  conv_processor.py  form_head.py  form_neck.py  multichannel_mamba.py  multichannel_mha.py  processor.py  training_warmup.py
cerberus_ts/utils/: cerberus_config.py  data_preparation.py  preparation.py
dev/ceberus_torch_coilnorm/: torch_coilnorm_notebook.ipynb  torch_coilnorm_notebook_acc.ipynb  torch_coilnorm_notebook_acc_drop.ipynb
dev/cerberusPy/: cerberus_builder_attention_noneck.py  cerberus_builder_noknown.py  scratch.py
docs/: benchmarking.md
img/: cerberus_foresight_diagram.drawio  cerberus_noforesight_diagram.drawio  foresight_diagram.drawio
tests/: example_cerberus.ipynb  example_cerberus_colab.ipynb  example_cerberus_local.ipynb  example_cerberus_local_newstruct.ipynb  foresight_development.ipynb
(+7 files in other folders)
