[tool.poetry]
name = "cerberus-ts"
version = "0.1.0"
description = ""
authors = ["ap0phasi <66261738+ap0phasi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
accelerate = "^0.30.1"
torch = {version = "^2.3.0+cu121", source = "pytorch"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch"}
matplotlib = "^3.9.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
